Merge changes of version 0.2.0 and ensure compatibility with JDK8