@@ -2,8 +2,10 @@ package io.github.tanyaofei.beancopier.test.callback;
 
 import io.github.tanyaofei.beancopier.BeanCopier;
 import io.github.tanyaofei.beancopier.test.BeanCopierTest;
+import lombok.var;
 import org.junit.jupiter.api.Test;
 
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -20,7 +22,8 @@ public class CallbackTest extends BeanCopierTest {
 
   @Test
   public void testCopyListCallback() {
-    var sources = IntStream.range(0, 10).mapToObj(ignored -> new CallbackObject().setString("source")).toList();
+    var sources = IntStream.range(0, 10).mapToObj(ignored -> new CallbackObject().setString("source")).collect(
+        Collectors.toList());
     var targets = BeanCopier.copyList(sources, CallbackObject.class, (s, t) -> t.setString("target"));
     for (var target : targets) {
       assertEquals("target", target.getString());
