@@ -2,9 +2,10 @@ package io.github.tanyaofei.beancopier.test.upcasting;
 
 import io.github.tanyaofei.beancopier.BeanCopier;
 import io.github.tanyaofei.beancopier.test.BeanCopierTest;
+import lombok.var;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
 /**
  * @author tanyaofei
@@ -16,7 +17,7 @@ public class UpcastingTest extends BeanCopierTest {
     var source = new UpcastingSource()
         .setValue(new StringValue("1"))
         .setNumber(1)
-        .setNumbers(List.of(1, 2, 3));
+        .setNumbers(Arrays.asList(1, 2, 3));
 
     var target = BeanCopier.copy(source, UpcastingTarget.class);
     assertEquals(source.getNumber(), target.getNumber());
